<resources>
    <string name="app_name" translatable="false">Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="delete_note">Delete Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_new_note">Add new note</string>
    <string name="you_don_t_have_any_note">You don\'t have any note</string>
    <string name="the_notes_you_create_will_appear_here">The notes you create will appear here.</string>
    <string name="new_note">New Note</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure_you_want_to_delete_this_note_this_action_cannot_be_undone">Are you sure you want to delete this note? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="error_incomplete_information">Error: Incomplete Information</string>
    <string name="please_fill_all_required_fields_thank_you">Please fill all required fields.</string>
</resources>